--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,31 @@
 
 	"require": {
 		"php": ">=5.3.1",
-		"nette/nette": "~2.0@rc"
+		"nette/utils": "^2.5",
+		"nette/tokenizer": "^2.3",
+		"nette/security": "^2.4",
+		"nette/safe-stream": "^2.3",
+		"nette/finder": "^2.4",
+		"nette/caching": "^2.5",
+		"nette/robot-loader": "^2.4",
+		"nette/reflection": "^2.4",
+		"nette/php-generator": "^2.6",
+		"nette/neon": "^2.4",
+		"nette/mail": "^2.4",
+		"nette/http": "^2.4",
+		"nette/component-model": "^2.3",
+		"nette/forms": "^2.4",
+		"nette/di": "^2.4",
+		"nette/deprecated": "^2.4",
+		"nette/database": "^2.4",
+		"nette/bootstrap": "^2.4",
+		"nette/application": "^2.4",
+		"latte/latte": "^2.4"
 	},
 
 	"require-dev": {
 		"nette/tester": "~1.3",
+	  	"tracy/tracy": "^2.4",
 		"mockery/mockery": "~0.9"
 	},
 
